# agent-scaled

./: CHANGELOG.md  LICENSE  README.md  main.py  pyproject.toml
src/: main.py  settings.py
src/agent/: graph.py  mcp_client.py  nodes.py  state.py
src/mcp/: basic.py
src/prompts/: system.py
src/tools/: __init__.py  basic.py
tests/: conftest.py  test_basic_tools.py  test_graph.py
