[project]
name = "agent-scaled"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.2.10",
    "langchain-openai>=1.1.9",
    "pydantic-settings>=2.13.0",
    "python-dotenv>=1.2.1",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver2"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true

[dependency-groups]
test = [
    "pytest>=9.0.2",
]
